--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -11,7 +11,7 @@ django-cors-headers==4.2.0
 django-environ==0.10.0
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
+djangorestframework_simplejwt==5.5.1
 djoser==2.2.0
 et_xmlfile==2.0.0
 idna==3.4
@@ -24,6 +24,7 @@ python3-openid==3.2.0
 pytz==2023.3
 requests==2.31.0
 requests-oauthlib==1.3.1
+setuptools==80.9.0
 social-auth-app-django==5.2.0
 social-auth-core==4.4.2
 sqlparse==0.4.4
